# fastapi_celery_app

./: .env.dev  .gitignore  Dockerfile  README.md  debug_main.py  docker-compose.yml  pyproject.toml
celery_app/: __init__.py  main.py
celery_app/clients/: __init__.py  mailing_client.py
celery_app/core/: __init__.py  config.py  logs.py
celery_app/db/: __init__.py  models.py  session.py
celery_app/middlewares/: __init__.py  handlers.py
celery_app/routers/: __init__.py
celery_app/routers/mailing/: __init__.py  funcs.py  mail.py  models.py  router.py
celery_app/static/mail_templates/: email-confirmation.html  email-verification.html
celery_app/workers/: __init__.py
celery_app/workers/mailing/: __init__.py  mail.py
docker_config/: .env.dev
